going narrower in the conclusion

--- a/module-1/pandas-project/your-code/shark_project.ipynb
+++ b/module-1/pandas-project/your-code/shark_project.ipynb
@@ -637,7 +637,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x115cacf60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11006dba8>"
       ]
      },
      "execution_count": 13,
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -757,10 +757,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x115dd3518>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1101460b8>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -795,19 +795,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Country\n",
-       " TONGA              2\n",
-       "ANTIGUA             1\n",
-       "ARUBA               1\n",
-       "ATLANTIC OCEAN      2\n",
-       "AUSTRALIA         302\n",
-       "dtype: int64"
+       " TONGA                          2\n",
+       "ANTIGUA                         1\n",
+       "ARUBA                           1\n",
+       "ATLANTIC OCEAN                  2\n",
+       "AUSTRALIA                     302\n",
+       "AZORES                          2\n",
+       "BAHAMAS                        53\n",
+       "BELIZE                          1\n",
+       "BERMUDA                         1\n",
+       "BRAZIL                         65\n",
+       "BRITISH VIRGIN ISLANDS          1\n",
+       "CANADA                          1\n",
+       "CARIBBEAN SEA                   2\n",
+       "CAYMAN ISLANDS                  1\n",
+       "CHILE                           4\n",
+       "CHINA                           1\n",
+       "COLUMBIA                        2\n",
+       "COSTA RICA                      3\n",
+       "CROATIA                         2\n",
+       "CUBA                            4\n",
+       "DIEGO GARCIA                    1\n",
+       "DOMINICAN REPUBLIC              3\n",
+       "ECUADOR                         6\n",
+       "EGYPT                          14\n",
+       "EGYPT / ISRAEL                  1\n",
+       "EL SALVADOR                     3\n",
+       "ENGLAND                         3\n",
+       "FIJI                           13\n",
+       "FRANCE                          2\n",
+       "FRENCH POLYNESIA               11\n",
+       "                             ... \n",
+       "PAPUA NEW GUINEA                5\n",
+       "PHILIPPINES                     9\n",
+       "PUERTO RICO                     1\n",
+       "REUNION                        30\n",
+       "RUSSIA                          4\n",
+       "SAMOA                           1\n",
+       "SCOTLAND                        3\n",
+       "SENEGAL                         2\n",
+       "SEYCHELLES                      4\n",
+       "SOLOMON ISLANDS                 5\n",
+       "SOMALIA                         5\n",
+       "SOUTH AFRICA                  182\n",
+       "SOUTH KOREA                     6\n",
+       "SPAIN                          12\n",
+       "SRI LANKA                       1\n",
+       "ST. MARTIN                      1\n",
+       "Sierra Leone                    1\n",
+       "TAIWAN                          3\n",
+       "THAILAND                        2\n",
+       "TONGA                           5\n",
+       "TRINIDAD & TOBAGO               2\n",
+       "TUNISIA                         1\n",
+       "TURKS & CAICOS                  5\n",
+       "UNITED ARAB EMIRATES (UAE)      1\n",
+       "UNITED KINGDOM                  3\n",
+       "USA                           990\n",
+       "VANUATU                         2\n",
+       "VENEZUELA                       2\n",
+       "VIETNAM                         4\n",
+       "YEMEN                           1\n",
+       "Length: 93, dtype: int64"
       ]
      },
      "metadata": {},
@@ -816,7 +872,7 @@
    ],
    "source": [
     "countries_list = dhf_years.groupby(dhf_years['Country']).size()\n",
-    "display(countries_list.head())\n",
+    "display(countries_list.head(100))\n",
     "\n",
     "#Por simplificar, elimino los paises en los que hay < 5 ataques\n",
     "\n"
@@ -824,7 +880,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Asumo que si los tiburones nos estan cazando como minimo nos matan ya que es dificil que un humano enfrentandose\n",
+    "#a un tiburon consiga escaparse. Por lo tanto, si el humano sobrevive significa que el tiburon esta defendiendo el \n",
+    "#territorio o se siente amenzado. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -842,40 +909,12 @@
     }
    ],
    "source": [
-    "#Asumo que si los tiburones nos estan cazando como minimo nos matan. Ya que es dificil que un humano enfrentandose\n",
-    "#a un tiburon consiga escaparse. Por lo tanto, si no lo mata el tiburon esta defendiendo el territorio o se siente amenzado. \n",
-    "\n",
     "countries_list11 = dhf_years.groupby(dhf_years['Fatal (Y/N)']).size()\n",
     "display(countries_list11.head())\n",
     "\n",
-    "#Con los datos que he seleccionado tan solo muestran que hay 259 fatales vs 1673 que sobreviven. Los tiburones no nos cazan,\n",
+    "#Con los datos que he seleccionado tan solo se muestra que hay 259 fatales vs 1673 que sobreviven. Los tiburones no nos cazan,\n",
     "#tan solo los humanos nos metemos en su territorio y ellos se defienden. Puede que debido a la pesca masiva, calentamiento global,\n",
-    "# u otros factores los tiburones se hayan desplazado hacia la costa y por tanto el numero de ataques se incrementa."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['SOUTH AFRICA', 'SPAIN', 'USA', 'AUSTRALIA', 'BRAZIL', 'ARUBA', 'BAHAMAS', 'MOZAMBIQUE', 'THAILAND', 'FIJI', 'REUNION', 'FRENCH POLYNESIA', 'PUERTO RICO', 'NEW CALEDONIA', 'ITALY', 'EGYPT', 'MEXICO', 'ATLANTIC OCEAN', 'GREECE', 'JAPAN', 'MAURITIUS', nan, 'ST. MARTIN', 'FRANCE', 'ECUADOR', 'CAYMAN ISLANDS', 'PAPUA NEW GUINEA', 'TRINIDAD & TOBAGO', 'NEW ZEALAND', 'KIRIBATI', 'ISRAEL', 'DIEGO GARCIA', 'TAIWAN', 'JAMAICA', 'PALESTINIAN TERRITORIES', 'GUAM', 'SEYCHELLES', 'BELIZE', 'PHILIPPINES', 'NIGERIA', 'TONGA', 'SCOTLAND', 'CANADA', 'CROATIA', 'ANTIGUA', 'INDONESIA', 'DOMINICAN REPUBLIC', 'KENYA', 'RUSSIA', 'COLUMBIA', 'TURKS & CAICOS', 'COSTA RICA', 'UNITED KINGDOM', 'MALAYSIA', 'UNITED ARAB EMIRATES (UAE)', 'SAMOA', 'AZORES', 'SOLOMON ISLANDS', 'SOUTH KOREA', 'MALTA', 'VIETNAM', 'PANAMA', 'SOMALIA', 'NEVIS', 'CUBA', 'ENGLAND', 'BRITISH VIRGIN ISLANDS', 'NORWAY', 'SENEGAL', 'YEMEN', 'GULF OF ADEN', 'Sierra Leone', 'LIBERIA', 'CHINA', 'VANUATU', 'MEXICO ', 'MADAGASCAR', 'HONDURAS', 'VENEZUELA', 'SRI LANKA', ' TONGA', 'INDIA', 'MICRONESIA', 'CARIBBEAN SEA', 'MARSHALL ISLANDS', 'OKINAWA', 'EGYPT / ISRAEL', 'NORTHERN ARABIAN SEA', 'HONG KONG', 'CHILE', 'EL SALVADOR', 'TUNISIA', 'NAMIBIA', 'BERMUDA']\n"
-     ]
-    }
-   ],
-   "source": [
-    "list_of_countries = [i for i in dhf_years['Country']]\n",
-    "\n",
-    "\n",
-    "lst = []\n",
-    "for a in list_of_countries:\n",
-    "    if a not in lst:\n",
-    "        lst.append(a)\n",
-    "print(lst)\n",
-    "#display(data_hypothesis.head())"
+    "#u otros factores los tiburones se hayan desplazado hacia la costa y por tanto el numero de ataques se incrementa."
    ]
   },
   {
@@ -902,6 +941,69 @@
     "\n",
     "countries_size = dhf_years.sort(dhf_years['Country']).size\n",
     "display(dhf_years.head(20))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Africa' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-d3601497ec03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlist_countriesh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m southern_hemisphere = (\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mAfrica\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mEntirely\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mAngola\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Africa' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "list_countriesh = []\n",
+    "southern_hemisphere = (\n",
+    "Africa,\n",
+    "Entirely,\n",
+    "Angola,\n",
+    "Botswana,\n",
+    "Burundi,\n",
+    "Comoros,\n",
+    "Eswatini,\n",
+    "Lesotho,\n",
+    "Madagascar,\n",
+    "Malawi,\n",
+    "Mauritius,\n",
+    "Mayotte,\n",
+    "Mozambique,\n",
+    "Namibia,\n",
+    "Réunion,\n",
+    "Rwanda,\n",
+    "Seychelles,\n",
+    "\n",
+    "Tanzania,\n",
+    "Zambia,\n",
+    "Zimbabwe,\n",
+    "Mostly,\n",
+    "\n",
+    "Gabon,\n",
+    "\n",
+    "Partially,\n",
+    "\n",
+    "Kenya,\n",
+    "\n",
+    "Somalia,\n",
+    "Uganda,\n",
+    "Asia,\n",
+    "Entirely,\n",
+    ")\n",
+    "\n",
+    "for e in southern_hemisphere.split(','):\n",
+    "    list_countriesh.append(e)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
