--- a/module-1/pandas-project/your-code/clean-database.ipynb
+++ b/module-1/pandas-project/your-code/clean-database.ipynb
@@ -1779,74 +1779,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       9\n",
-       "1       9\n",
-       "2       9\n",
-       "3       9\n",
-       "4       9\n",
-       "5       9\n",
-       "6       9\n",
-       "7       9\n",
-       "8       9\n",
-       "9       9\n",
-       "10      9\n",
-       "11      9\n",
-       "12      9\n",
-       "13      8\n",
-       "14      8\n",
-       "15      8\n",
-       "16      8\n",
-       "17      8\n",
-       "18      8\n",
-       "19      8\n",
-       "20      7\n",
-       "21      7\n",
-       "22      7\n",
-       "23      7\n",
-       "24      7\n",
-       "25      7\n",
-       "26      7\n",
-       "27      7\n",
-       "28      7\n",
-       "29      7\n",
-       "       ..\n",
-       "5962    0\n",
-       "5963    0\n",
-       "5964    0\n",
-       "5965    0\n",
-       "5966    0\n",
-       "5967    0\n",
-       "5968    0\n",
-       "5969    0\n",
-       "5970    0\n",
-       "5971    0\n",
-       "5972    0\n",
-       "5973    0\n",
-       "5974    0\n",
-       "5975    0\n",
-       "5976    0\n",
-       "5977    0\n",
-       "5978    7\n",
-       "5979    7\n",
-       "5980    7\n",
-       "5981    0\n",
-       "5982    0\n",
-       "5983    0\n",
-       "5984    0\n",
-       "5985    0\n",
-       "5986    0\n",
-       "5987    0\n",
-       "5988    0\n",
-       "5989    0\n",
-       "5990    0\n",
-       "5991    0\n",
-       "Name: month, Length: 5992, dtype: int64"
+       "0    <generator object findmonth.<locals>.<genexpr>...\n",
+       "1    <generator object findmonth.<locals>.<genexpr>...\n",
+       "2    <generator object findmonth.<locals>.<genexpr>...\n",
+       "3    <generator object findmonth.<locals>.<genexpr>...\n",
+       "4    <generator object findmonth.<locals>.<genexpr>...\n",
+       "Name: Month, dtype: object"
       ]
      },
      "metadata": {},
@@ -1863,32 +1807,12 @@
     "columna_mes = []\n",
     "\n",
     "def findmonth(m):\n",
-    "    if \"Jan\" in m or \"jan\" in m:\n",
-    "        return 1\n",
-    "    elif \"Feb\" in m or \"feb\" in m:\n",
-    "        return 2\n",
-    "    elif \"Mar\" in m or \"mar\" in m:\n",
-    "        return 3\n",
-    "    elif \"Apr\" in m or \"apr\" in m:\n",
-    "        return 4\n",
-    "    elif \"May\" in m or \"may\" in m:\n",
-    "        return 5\n",
-    "    elif \"Jun\" in m or \"jun\" in m:\n",
-    "        return 6\n",
-    "    elif \"Jul\" in m or \"jul\" in m:\n",
-    "        return 7\n",
-    "    elif \"Aug\" in m or \"aug\" in m:\n",
-    "        return 8\n",
-    "    elif \"Sep\" in m or \"sep\" in m:\n",
-    "        return 9\n",
-    "    elif \"Oct\" in m or \"oct\" in m:\n",
-    "        return 10\n",
-    "    elif \"Nov\" in m or \"nov\" in m:\n",
-    "        return 11\n",
-    "    elif \"Dic\" in m or \"dic\" in m:\n",
-    "        return 12\n",
-    "    else:\n",
-    "        return 0\n",
+    "    dic = {\"jan\": 1,\"feb\": 2,\"mar\": 3,\"apr\": 4,\"ap-\": 4,\"may\": 5,\"jun\": 6,\"jul\": 7,\"jul\": 8,\"sep\": 9,\\\n",
+    "          \"oct\": 10,\"nov\": 11,\"dic\": 12}\n",
+    "\n",
+    "    if m in dic.keys():\n",
+    "        return dic.get(dic,0)\n",
+    "        \n",
     "\n",
     "\n",
     "'''for e in df_fechas[\"Date\"]:\n",
@@ -1900,7 +1824,7 @@
     "'''\n",
     "\n",
     "df_cleaning[\"Month\"] = df_cleaning[\"Date\"].apply(findmonth)\n",
-    "display(df_cleaning[\"Month\"])"
+    "display(df_cleaning[\"Month\"].head())"
    ]
   },
   {
@@ -1928,6 +1852,25 @@
     "x = df_cleaning[df_cleaning[\"Year\"]==0]\n",
     "\n",
     "x[\"Case Number\"].head().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['jan', 'feb', 'mar', 'apr', 'ap-', 'may', 'jun', 'jul', 'sep', 'oct', 'nov', 'dic'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {\"jan\": 1,\"feb\": 2,\"mar\": 3,\"apr\": 4,\"ap-\": 4,\"may\": 5,\"jun\": 6,\"jul\": 7,\"jul\": 8,\"sep\": 9,\\\n",
+    "          \"oct\": 10,\"nov\": 11,\"dic\": 12}\n",
+    "print(dic.keys())"
    ]
   },
   {
