--- a/module-1/pandas-project/your-code/Analysis.ipynb
+++ b/module-1/pandas-project/your-code/Analysis.ipynb
@@ -702,7 +702,11 @@
    "metadata": {},
    "source": [
     "Podemos ver que con el paso de los años **la tasa de fatalidad de los ataques de tiburón** ha disminuido \n",
-    "desde un **40% en los años 1950** hasta encontrarese la tasa entorno a un **10% durante la primera década de los 2000.**"
+    "desde un **40% en los años 1950** hasta encontrarese la tasa entorno a un **10% durante la primera década de los 2000.**\n",
+    "\n",
+    "Los motivos de este descenso pueden ser variados:\n",
+    ">- Una **mejor respuesta sanitaria** ante los ataques de tiburón ( mejoras en la medicina)\n",
+    ">- Un **transporte más rápido** de los atacados a un centro sanitario (mejora de los transportes)"
    ]
   },
   {
