--- a/module-1/pandas-project/your-code/clean-database.ipynb
+++ b/module-1/pandas-project/your-code/clean-database.ipynb
@@ -1779,18 +1779,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    <generator object findmonth.<locals>.<genexpr>...\n",
-       "1    <generator object findmonth.<locals>.<genexpr>...\n",
-       "2    <generator object findmonth.<locals>.<genexpr>...\n",
-       "3    <generator object findmonth.<locals>.<genexpr>...\n",
-       "4    <generator object findmonth.<locals>.<genexpr>...\n",
-       "Name: Month, dtype: object"
+       "0       9\n",
+       "1       9\n",
+       "2       9\n",
+       "3       9\n",
+       "4       9\n",
+       "5       9\n",
+       "6       9\n",
+       "7       9\n",
+       "8       9\n",
+       "9       9\n",
+       "10      9\n",
+       "11      9\n",
+       "12      9\n",
+       "13      8\n",
+       "14      8\n",
+       "15      8\n",
+       "16      8\n",
+       "17      8\n",
+       "18      8\n",
+       "19      8\n",
+       "20      7\n",
+       "21      7\n",
+       "22      7\n",
+       "23      7\n",
+       "24      7\n",
+       "25      7\n",
+       "26      7\n",
+       "27      7\n",
+       "28      7\n",
+       "29      7\n",
+       "       ..\n",
+       "4844    3\n",
+       "4845    3\n",
+       "4846    1\n",
+       "4847    1\n",
+       "4848    1\n",
+       "4849    1\n",
+       "4850    1\n",
+       "4851    9\n",
+       "4852    9\n",
+       "4853    8\n",
+       "4854    9\n",
+       "4855    9\n",
+       "4856    1\n",
+       "4857    1\n",
+       "4858    8\n",
+       "4859    8\n",
+       "4860    8\n",
+       "4861    8\n",
+       "4862    9\n",
+       "4863    9\n",
+       "4864    2\n",
+       "4865    2\n",
+       "4866    0\n",
+       "4867    0\n",
+       "4868    0\n",
+       "4869    0\n",
+       "4870    1\n",
+       "4871    1\n",
+       "4872    1\n",
+       "4873    1\n",
+       "Name: Month, Length: 4175, dtype: int64"
       ]
      },
      "metadata": {},
@@ -1807,15 +1863,45 @@
     "columna_mes = []\n",
     "\n",
     "def findmonth(m):\n",
+    "    m=m.lower()\n",
+    "    if \"jan\" in m:\n",
+    "        return 1\n",
+    "    elif \"feb\" in m:\n",
+    "        return 2\n",
+    "    elif \"mar\" in m:\n",
+    "        return 3\n",
+    "    elif \"apr\" in m:\n",
+    "        return 4\n",
+    "    elif \"may\" in m:\n",
+    "        return 5\n",
+    "    elif \"jun\" in m:\n",
+    "        return 6\n",
+    "    elif \"jul\" in m:\n",
+    "        return 7\n",
+    "    elif \"aug\" in m:\n",
+    "        return 8\n",
+    "    elif \"sep\" in m:\n",
+    "        return 9\n",
+    "    elif \"oct\" in m:\n",
+    "        return 10\n",
+    "    elif \"nov\" in m:\n",
+    "        return 11\n",
+    "    elif \"dic\" in m:\n",
+    "        return 12\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "def findmonth(m):\n",
     "    dic = {\"jan\": 1,\"feb\": 2,\"mar\": 3,\"apr\": 4,\"ap-\": 4,\"may\": 5,\"jun\": 6,\"jul\": 7,\"jul\": 8,\"sep\": 9,\\\n",
     "          \"oct\": 10,\"nov\": 11,\"dic\": 12}\n",
     "\n",
     "    if m in dic.keys():\n",
     "        return dic.get(dic,0)\n",
-    "        \n",
     "\n",
     "\n",
-    "'''for e in df_fechas[\"Date\"]:\n",
+    "for e in df_fechas[\"Date\"]:\n",
     "    #year = findyear()\n",
     "    month = findmonth(e)\n",
     "    \n",
@@ -1824,7 +1910,7 @@
     "'''\n",
     "\n",
     "df_cleaning[\"Month\"] = df_cleaning[\"Date\"].apply(findmonth)\n",
-    "display(df_cleaning[\"Month\"].head())"
+    "display(df_cleaning[\"Month\"])"
    ]
   },
   {
